tests/reject/varInitNotAllPaths.emojic
🏁 🍇
  👍 ➡️ bool
  🖍🆕 var 🔡
  ↪️ bool 🍇
    🔤Bob🔤 ➡️🖍var
  🍉
🍉
